name: ptr-poker
version: 0.1
synopsis: Pointer poking action construction and composition toolkit
category: JSON
homepage: https://github.com/nikita-volkov/ptr-poker
bug-reports: https://github.com/nikita-volkov/ptr-poker/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/ptr-poker.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    PtrPoker
  other-modules:
    PtrPoker.IO.Ascii
    PtrPoker.IO.ByteString
    PtrPoker.IO.Prim
    PtrPoker.Prelude
    PtrPoker.UncheckedShifting
  c-sources:
    cbits/dtoa.c
    cbits/itoa.c
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.12,
    text >=1 && <2
